fixed the overlapping screen on smaller screen

--- a/css/index.css
+++ b/css/index.css
@@ -4,16 +4,21 @@
   /* text-align: center; */
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 section img {
   border-radius: 20px;
-  margin:1em;
+  margin: 1em;
   width: 80%;
 }
 
 div#about {
-  margin-top: 3em;
+  /* margin-top: 3em; */
   text-align: center;
-  margin-bottom: 0.025em;
+  /* margin-bottom: 0.025em;
+   */
 }
 
 section#about {
@@ -100,19 +105,19 @@ section#contacts {
   object-fit: contain;
 }
 
-#header{
+/* #header{
   background-color: white;
-}
+} */
 
 .ab img {
   max-width: 100%;
   width: 90%;
 }
 
-.form {
+/* .form {
   max-width: 90%;
   width: 80%;
-}
+} */
 
 span .contact {
   margin-top: 0;
