--- a/css/nav.css
+++ b/css/nav.css
@@ -1,5 +1,5 @@
-nav {
-    background-color: rgb(255, 255, 255);
+ nav {
+    /* background-color: rgb(255, 255, 255); */
     display: none;
 }
 
@@ -70,7 +70,7 @@ nav ul li a {
 @media only screen and (min-width: 768px) {
     nav {
         max-width:90%;
-        background-color: white;
+        /* background-color: white; */
         display: flex;
         flex-direction: row;
         justify-content: flex-end;   
